fix navbar spacing issue

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,6 +1,6 @@
 .nav {
   background-color: grey;
-  height: 80px;
+  /* height: 80px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,19 +14,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80px;
-  max-width: 1920px;
+  /* width: 100%; */
+  /* height: 80px; */
+  /* max-width: 1920px; */
+  /* min-width: 1200px; */
 }
 
 .nav-list {
   display: flex;
-  margin-left: 135%;
+  /* margin-left: 135%; */
   padding: 3px;
 }
 
 .nav-items {
   list-style: none;
-  height: 80px;
+  /* height: 80px; */
 }
 .nav-links {
   color: black;
@@ -35,7 +37,7 @@
   text-decoration: none;
   padding: 0.5rem 2rem;
   margin: 0 0.5rem;
-  height: 100%;
+  /* height: 100%; */
 }
 
 
