--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 90vh;
+  /* width: 90vw; */
 }
 
 .home-title {
